fixing mobile blog alignment on mobile

--- a/stylesheets/blog.scss
+++ b/stylesheets/blog.scss
@@ -36,8 +36,8 @@ $pheno-p: url("/assets/images/blog/pheno-p.png"); ///////////////// DESIGN ELEME
                 margin-left: 72px !important;
             }
             @media only screen and (min-device-width : 400px) and (max-device-width : 470px) and (-webkit-min-device-pixel-ratio : 2) {
-                margin-top: -39px !important;
-                margin-left: 95px !important;
+/*                 margin-top: -39px !important;
+                margin-left: 95px !important; */
             }
             @media only screen and (min-device-width : 374px) and (max-device-width : 399px) and (-webkit-min-device-pixel-ratio : 2) {
                 margin-top: -39px !important;
